# playwright-python-async-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: playwright-tests.yml
ci/: Jenkinsfile  README.md
docs/: API_TESTING.md  DATABASE_TESTING.md  UI_TESTING.md
helpers/: api_client.py  database.py  redis_client.py
pages/: base_page.py  login_page.py  standard_web_page.py
pages/base_pages/: login_page.py  standard_web_page.py
pages/examples/: __init__.py  authentication_page.py  demo_page.py  product_management_page.py  spa_products_page.py  user_management_page.py
tests/: test_api_examples.py  test_crud_example.py  test_database_examples.py  test_demo_public_site.py  test_ui_examples.py
tests/examples/: test_crud_example.py  test_generic_webapp_example.py  test_login_example.py
utils/: config.py  consts.py  exceptions.py  test_helpers.py
