# pyproject.toml - Configuration for Python tools

[tool.black]
line-length = 100
target-version = ['py310']
extend-exclude = '''
/(
  # directories
  __pycache__
  | \.venv
  | venv
  | build
  | dist
  | \.git
  | \.pytest_cache
  | \.mypy_cache
  | allure-results
  | screenshots
  | reports
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["pages", "helpers", "utils"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
# Already configured in pytest.ini, but can be referenced here
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist"
]

[tool.bandit]
exclude_dirs = ["tests", "__pycache__", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_command checks in tests

[tool.coverage.run]
source = ["pages", "helpers", "utils"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "conftest.py"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
